# ppsvaulttracker

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  build.ps1
.github/workflows/: ci.yml
src/: AppVersion.h  Main.cpp
src/engine/: ChannelStripNode.h  HostEngine.cpp  HostEngine.h  InternalNodeBase.h  MidiRouterNode.h  MixLogic.h
src/io/: MidiExport.cpp  MidiExport.h  ModImport.cpp  ModImport.h  ModImportMapping.h  ProjectIO.cpp  ProjectIO.h
src/model/: Cell.h  DemoPattern.h  EffectCommands.h  Pattern.h  PatternOps.h  PatternUndo.h  Song.h
src/sequencer/: CcInterp.h  SequencerNode.cpp  SequencerNode.h  TrackerClock.h
src/ui/: ArrangementView.cpp  ArrangementView.h  CcLanePanel.cpp  CcLanePanel.h  GridMetrics.h  MainComponent.cpp  MainComponent.h  MixerView.cpp  MixerView.h  PatternEditor.cpp  PatternEditor.h  PatternView.h  PillSlider.h  RVLookAndFeel.h  SplashScreen.h  TrackStyle.h
tests/: CMakeLists.txt  EditTests.cpp  IoTests.cpp  MixTests.cpp  ModelTests.cpp  SanityTests.cpp
